@@ -45,6 +45,8 @@ public class ReturnTypesTest extends TestCase {
         int returnInt32Magic();
         long returnInt64Zero();
         long returnInt64Magic();
+        NativeLong returnLongZero();
+        NativeLong returnLongMagic();
         float returnFloatZero();
         float returnFloatMagic();
         double returnDoubleZero();
@@ -80,6 +82,22 @@ public class ReturnTypesTest extends TestCase {
         assertEquals("Expect 64-bit magic", 
                      "123456789abcdef0", 
                      Long.toHexString(lib.returnInt64Magic()));
+    }
+    
+    public void testInvokeNativeLong() {
+        if (NativeLong.SIZE == 4) {
+            assertEquals("Expect 32-bit zero", new NativeLong(0), lib.returnLongZero());
+            assertEquals("Expect 32-bit magic", 
+                         "12345678", 
+                         Integer.toHexString(lib.returnLongMagic().intValue()));
+                         
+        } else {
+            assertEquals("Expect 64-bit zero", new NativeLong(0L), 
+                         lib.returnLongZero());
+            assertEquals("Expect 64-bit magic", 
+                         "123456789abcdef0", 
+                         Long.toHexString(lib.returnLongMagic().longValue()));
+        }
     }
 
     public void testInvokeFloat() {
